[gd_scene load_steps=8 format=2]

[ext_resource path="res://arts/RAMAPlaceHolder.png" type="Texture" id=1]
[ext_resource path="res://scenes/game/components/RAM.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/components/Cable.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game/components/Port.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/game/components/StorageDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/game/components/MemoryControl.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.97778, 90.1587 )

[node name="RAM" type="Area2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.33334, -0.333333 )
scale = Vector2( 3.75, 1.05 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9.53674e-07, -0.666666 )
rotation = -1.5708
scale = Vector2( 0.755642, 1.06105 )
texture = ExtResource( 1 )

[node name="StorageDisplay" parent="Sprite" instance=ExtResource( 5 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -127.485
margin_top = -35.8139
margin_right = -127.485
margin_bottom = -35.8139

[node name="Cable" parent="." instance=ExtResource( 3 )]
scale = Vector2( 0.07, 0.13 )
z_index = -1

[node name="PortA" parent="." instance=ExtResource( 4 )]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -70.3333, -65.3333 )

[node name="PortB" parent="." instance=ExtResource( 4 )]
modulate = Color( 0.12549, 1, 0, 1 )
position = Vector2( -70.3333, -1.33334 )

[node name="PortC" parent="." instance=ExtResource( 4 )]
modulate = Color( 0.0313726, 0, 1, 1 )
position = Vector2( -70.3333, 62.6667 )

[node name="MemoryControl" parent="." instance=ExtResource( 6 )]
margin_left = 9.33333
margin_top = -15.6667
margin_right = 9.33333
margin_bottom = -15.6667

[connection signal="mouse_entered" from="." to="." method="_on_RAM_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_RAM_mouse_exited"]
[connection signal="Connect" from="PortA" to="." method="_on_PortA_Connect"]
[connection signal="Connect" from="PortB" to="." method="_on_PortB_Connect"]
[connection signal="Connect" from="PortC" to="." method="_on_PortC_Connect"]
